syntax = "proto3";

import "google/protobuf/wrappers.proto";

option java_multiple_files = true;
option java_package = "by.sakuuj.articles.person.grpc";

message UUID {
    string value = 1;
}

enum Role {
    USER = 0;
    ADMIN = 1;
    PUBLISHER = 2;
}

message Email {
    string value = 1;
}

message SavePersonRequest {
    Email primary_email = 1;
    repeated Role roles = 2;
}

message PersonResponse {
    UUID id = 1;
    Email primary_email = 2;
    repeated Role roles = 3;
    google.protobuf.BoolValue is_blocked = 4;
}

message MaybePersonResponse {
    oneof maybe_person {
        PersonResponse person_response = 1;
    }
}

message RolesRequest {
    UUID person_id = 1;
    repeated Role roles = 2;
}

service PersonService {

    rpc GetPersonByEmail(Email) returns (MaybePersonResponse);

    rpc GetPersonById(UUID) returns (MaybePersonResponse);

    rpc SavePerson(SavePersonRequest) returns (PersonResponse);

    rpc BlockPerson(UUID) returns (PersonResponse);

    rpc UnblockPerson(UUID) returns (PersonResponse);

    rpc AddRolesToPerson(RolesRequest) returns (PersonResponse);

    rpc RemoveRolesFromPerson(RolesRequest) returns (PersonResponse);
}